# petall

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/: .env  .env.example  Cargo.toml  TODO.md  docker-compose.yml
backend/.sqlx/: query-1a8c01978f613ea9ef133118292b0da4e2fc9ad8fe1d18bee8454e5e7dbd6311.json  query-1b185a5853eda59773194c7d2f8211b5e1f74de10e92cd0cfa4d03aa0539d3d7.json  query-568c4f184ec82be3c15c0c885b95c0d2c4698cce17dd059360e09e16fa894f34.json  query-6d7c49a77c628e1267cb7ae35f2fee1aeb7dd9d4888c7b8105022117142779a1.json  query-88e103faeff76ae62b31bc377d0e38748216af52c599a7832a4c5dda91e480b6.json  query-9da928691f58f4513dbf7ea4819f23964ef0fc7918279c74c407e586b3ad4a78.json  query-b082a4ec36c917b40e0a9a14bfd7fdc5392e70b837861b4515647f9f4e0a3f63.json  query-b2e3184b9de3bf24967b42f62004a9116837c4c0d5f4774f4947a1c876462f25.json  query-b850473c2e2c10208d7722f1defe0ce88f306323618e71ac59d733b834b633f6.json  query-bb8be975abbf0ef40b4ee60a918770557c25d7c053f8f6df04739d303a5a212b.json  query-bcf55508d1e880accbd0b26ca679cfa815fe49781808d40e725aaa240a32e6d9.json  query-c8f0b7d4d092f0046e68182ea0304da40c4a6651bfc5ff530bb075d1d6ef6337.json  query-e46f31bfef88b4325ff5de9b8568ee0cc8ff74047e2bad6a669d1bc324f84eda.json  query-eae3e054284451481a990408348c432b1910da0e796262be671f92344425ddf4.json  query-ef7e46936f5e3af7095ff1a7ceead74c04325803d8d69f48a229639b6a22999a.json  query-f051a93b08a2bb3512bee77fe727e8bb39ef85126f7dceed873f7f5881dc3598.json  query-fd58c1aa4955b08ba0a7984987ced6cc22d867e26788584b9b073c1d1f43e8af.json
backend/keys/: setup.sh
backend/migrations/: 20250813143956_create_managers_table.sql  20250813144000_create_users_table.sql  20250813144004_create_community_table.sql  20250813144010_create_energytransfer_table.sql  20250813155641_create_constraints.sql  20250814145900_user_community.sql  20250814145905_manager_community.sql  20250814150058_create_constraints.sql  20250815215938_init.sql  user_key_migration.sql
backend/src/: community.rs  config.rs  error.rs  main.rs  manager.rs  manager_community.rs  models.rs  participant.rs  router.rs  seed.rs  seeds.rs  user.rs  user_community.rs
community-backend/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
community-backend/.sqlx/: query-01c5d0466cad875b7997d4cea13d395597c7a4debc1eb835c45bc211bbb68866.json  query-1f09ecff398b1b1a74cd33cd27fb45a57f35da3b663af02484d8ce9798a16962.json  query-3582bb4bec4750fe0ccf2eea7005921f573029c130a0a9aa4ae51128667fca5a.json  query-3b811a5166035e668e1e438dca9a05a1735fd6ddf68bd4ff02ad773cbae9af42.json  query-3b9d450c44d2c1a91279d1098854da8586aba3e384ba2a74d4f0b4fa84ee1877.json  query-3d7bd7ffa973c25da99b154794a6396c08a893ecc72706f5681bcec293513973.json  query-43d860e0545d88ef8fbbb1b3954fdeb8464de9a90cf0c04fb34d54aef6431f7c.json  query-4ce5b71bb86b6ac9422633fe186c15fc1c17d93669e0ccbc2e941c69b6177f58.json  query-4f50f4d92b7157d51c579017c25c4a10696e00f66ca4f435c42a54b8d172f583.json  query-5dc2630029bb4b861116376e83893b7d5468dcef9ea61b6530b6dc9f4ffbe5f4.json  query-5ff01abe14f723a1e14cf2e345623d527d34aef67961d0d891b9ffd17cb28820.json  query-621e71c5742200aa45d45901bbf1866d5c3d4cdc41b9a40b12534acb158e0316.json  query-69379bafc06e1753b22cfe9e652b452887ecbca9a91b949e836c0cc6facc05b6.json  query-7fe95f367404417ee10de47a3c0fda3679a29a306e1e4e26b84d043187880629.json  query-845bada2f57d0671ad7802c24aa7f5d6c591417f74f622514b519dee67bdd702.json  query-9e68310cd5d93ee12380c2f6a647446846bf7dbf4fe107d1cd15470df9ea252b.json  query-9ed53dc76671feb60de30e0ef7b1087d3e7e857be10afd048e126da70879bdbd.json  query-a6e25bd75834c164c0ad20cf8674dcafe81ddd1c428537bb0839334cbd77b4b2.json  query-aa367b06743ec2da33aecdbc035fcfbd9525688ffe163452238b03f014324d46.json  query-b082a4ec36c917b40e0a9a14bfd7fdc5392e70b837861b4515647f9f4e0a3f63.json  query-b517124ab267a7d0deb6fd6553fe025f404e11f5e7ef222191e9d89bd23b93ae.json  query-b66e14ed4e607d91387464868fb792c03a41682e73e79f7a02547aa7edd77a92.json  query-bb7c81f74e45c0b358e036e0998ab045be6b814d4c458e82c17eeb515ccd2e6c.json  (+9 more)
zk-poc-service/: Cargo.toml  Dockerfile
(+219 files in other folders)
