[workspace]
members = ["common","community-backend", "zk-poc-service"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.4", features = ["macros"] }
bigdecimal = { version = "0.4.8", features = ["serde", "serde_json"] }
chrono = {version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive", "env"] }
dotenv = "0.15.0"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
url = "2.5"
rand = "0.8.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "uuid", "bigdecimal"] }
