[package]
name = "petall"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
axum = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
names = { version = "0.14.0", default-features = false }
axum-extra = { version = "0.10.1", features = ["cookie"] }
postgres-types = "0.2.9"
thiserror = "2.0.14"
tower-http = { version = "0.6.6", features = ["trace"] }
validator = { version = "0.20.0", features = ["derive"] }
fake = "4.4.0"
rust_decimal = "1.37.2"
argon2 = "0.5.3"
axum-test = "18.1.0"
tracing-test = "0.2.5"
itertools = "0.14.0"
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }
num-bigint = { version = "0.4", features = ["rand"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
