[package]
name = "zk-poc-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
axum = { workspace = true }
anyhow = { workspace = true }
bigdecimal = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12.24", features = ["json"] }
